# mcp-memory-service

./: .dockerignore  .gitattributes  .gitignore  .mcp.json.backup  .mcp.json.template  2025-07-26-MergeStartegy Incomplete.txt  =5.9.0  AWESOME_LIST_SUBMISSION.md  CHANGELOG.md  CLAUDE.md  CLAUDE_PERSONALIZED.md  COMPLETE_SETUP_GUIDE.md  DOCUMENTATION_ANALYSIS.md  Dockerfile  FIXES_SQLITE_VEC_EMBEDDINGS.md  LICENSE  LITESTREAM_SETUP_GUIDE.md  MIGRATION_GUIDE.md  MIGRATION_LOG.md  MULTI_CLIENT_FILES.md  NOTICE  PROJECT_STATUS.md  PYTORCH_DOWNLOAD_FIX.md  README.md  README_PRODUCTION.md  RELEASE_CHECKLIST.md  REPO_ORGANIZATION_PLAN.md  ROADMAP.md  SESSION_MEMORY_2025-08-11.md  SPONSORS.md  TEST_CLIENT_HOSTNAME.md  UBUNTU_SETUP.md  claude_code_wrapper.sh  db_health_check.py  debug_distances.py  debug_embeddings.py  deploy_dual_services.sh  deploy_fastmcp_fixed.sh  deploy_http_with_mcp.sh  development_session_memory.md  (+55 more)
.claude/: settings.local.json
.git-rewrite/: backup-refs  commit  heads  index  parse  revs
.github/: FUNDING.md  FUNDING.yml  funding.md
.github/workflows/: CACHE_FIX.md  LATEST_FIXES.md  README_OPTIMIZATION.md  SECRET_CONDITIONAL_FIX.md  WORKFLOW_FIXES.md  bridge-tests.yml  cleanup-images.yml  cleanup-images.yml.disabled  docker-publish.yml  main-optimized.yml  main-optimized.yml.disabled  main.yml  publish-and-test.yml  release-tag.yml  release.yml
archive/: CLAUDE_CODE_FIX.md  PROJECT_STATUS.md  README.md  alternative_test_server.py  compatibility_test_server.py  diagnose_mcp.py  fixed_memory_server.py  minimal_uv_server.py  simplified_memory_server.py  ultimate_protocol_debug.py
archive/2025-06-24/: README.md
archive/claude_code_fix/: CHANGES.md  verify_fix.py
archive/debug-scripts/: baseline_test_report.md  baseline_test_results.json  baseline_test_suite.py  test_all_mcp_tools.py  test_import.py  test_smithery.py  test_timestamp_issue.py  test_timestamp_simple.py
archive/deployment/: deploy_mcp_v4.sh
archive/docs-removed-2025-08-23/: UBUNTU_SETUP.md  claude-code-integration.md  claude-desktop-setup.md  database-synchronization.md  invocation_guide.md  mcp-client-configuration.md  service-installation.md
archive/docs-root-cleanup-2025-08-23/: CLOUDFLARE_IMPLEMENTATION.md  DOCUMENTATION_CLEANUP_PLAN.md  DOCUMENTATION_CONSOLIDATION_COMPLETE.md  LITESTREAM_SETUP_GUIDE.md  README-ORIGINAL-BACKUP.md
archive/documentation/: CLEANUP_PLAN.md  TIMESTAMP_FIX_SUMMARY.md
archive/setup-development/: README.md  STARTUP_SETUP_GUIDE.md  setup_consolidation_mdns.sh  (+1 more)
backup_performance_optimization/: chroma.py.backup
chroma_data/: chroma.sqlite3
claude-hooks/: README-phase2.md  README.md  config.json  config.template.json  install.sh  install_claude_hooks_windows.bat  install_claude_hooks_windows.ps1
claude_code_fix/: TESTING.md
claude_commands/: README.md  memory-context.md  memory-health.md  memory-recall.md  memory-search.md  memory-store.md
claude_config/: claude_desktop_config.json
deployment/: mcp-memory.service  staging_db_init.sql
docs/: CHANGELOG.md  DOCUMENTATION_AUDIT.md  HOOK_IMPROVEMENTS.md  IMAGE_RETENTION_POLICY.md  IMPLEMENTATION_PLAN_HTTP_SSE.md  IMPLEMENTATION_SUMMARY.md  INTEL_MAC_SETUP.md  LM_STUDIO_COMPATIBILITY.md  MERGE_STRATEGY.md  MULTI_CLIENT_DEPLOYMENT.md  README.md  advanced-techniques.md  architecture.md  claude-code-integration-success.md  cloudflare-setup.md  data-analysis-examples.md  docker-boot-loop-fix.md  docker-fixes.md  enhancement-roadmap-issue-14.md  first-time-setup.md  glama-deployment.md  ide-compatability.md  integrations.md  memory-maintenance-guide.md  multi-client-setup-guide.md  remote-configuration-wiki-section.md  saas-monetization-strategy.md  smithery-fix.md  sqlite-vec-backend.md  sqlite-vec-research.md  testing-cloudflare-backend.md
examples/: README.md  claude-desktop-http-config.json  claude_desktop_config_template.json  claude_desktop_config_windows.json  http-mcp-bridge.js  memory_export_template.json  start_https_example.sh
prompts/: load_memory_context.md
scripts/: README.md  TIME_BASED_RECALL_FIX.md  analyze_sqlite_vec_db.py  backup_memories.py  backup_sqlite_vec.sh  check_documentation_links.py  check_server_health.py  check_sqlite_vec_status.py  claude_commands_utils.py  cleanup_corrupted_encoding.py  cleanup_memories.md  cleanup_memories.py  cleanup_organize.py  convert_to_uv.py  debug_dependencies.py  export_distributable_memories.sh  find_duplicates.py  find_orphaned_files.py  fix_pytorch_dependency.py  fix_readline.py  fix_sitecustomize.py  generate_personalized_claude_md.sh  install_claude_hooks_windows.bat  install_claude_hooks_windows.ps1  install_linux_service.py  install_macos_service.py  install_uv.py  install_windows.py  install_windows_service.py  list-collections.py  manual_test_guide.py  mcp-migration.py  memory_offline.py  merge_database_incomplete.py  migrate_chroma_to_sqlite.py  migrate_sqlite_vec_embeddings.py  migrate_storage.py  migrate_tags.py  migrate_timestamps.py  migrate_to_cloudflare.py  (+36 more)
src/: chroma_test_isolated.py  test_client.py  test_management.py
sync/: apply_local_changes.sh  manual_sync.sh  memory_sync.sh  resolve_conflicts.sh  sync_from_remote.sh  sync_from_remote_noconfig.sh
tasks/: cloudflare-api-requirements.md  phase1-backend.md
tests/: README.md  conftest.py  test_array_tag_fix.py  test_memory_metadata_update.py  test_sqlite_vec_storage.py  test_time_parser.py  test_timestamp_recall.py
tools/: README.md
wiki/: Memory-Cleanup-Example.md
(+225 files in other folders)
